--- a/simple-grid.css
+++ b/simple-grid.css
@@ -15,6 +15,73 @@ body {
   background-color: #03071e;
   font-size: 0.75em;
 }
+/* Table style for Cart */
+.cart {
+  /* position: fixed; */
+  width: 100%;
+  /* margin: auto; */
+  /* width: 40%; */
+  /* min-height: 15em; */
+  background-color: #faa307;
+  top: 0em;
+  right: 0em;
+  margin-right: 1em;
+  padding: 1em;
+  /* border: 0.1em solid; */
+  border-radius: 0.25em;
+  /* z-index: 1000; */
+}
+
+.cartTotal {
+  position: fixed;
+  /* width: 100%; */
+  /* margin: auto; */
+  width: 20%;
+  /* min-height: 15em; */
+  background-color: #faa307;
+  top: 0em;
+  right: 0em;
+  margin-right: 1em;
+  padding: 1em;
+  /* border: 0.1em solid; */
+  border-radius: 0.25em;
+  /* z-index: 1000; */
+}
+
+.cart table {
+  border-collapse: collapse;
+}
+
+.cart table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.cart td {
+  border-top: 1px solid snow;
+} 
+
+.cart th, td {
+  padding: 15px;
+  text-align: left;
+}
+
+.cart img {
+  width: 2em;
+}
+
+.cart h3 {
+  /* text-decoration: underline; */display: inline;
+}
+
+.cartTotal {
+  padding: 1em;
+}
+
+.cartTotal img {
+  /* padding: 1em; */
+  width: 2em;
+}
 
 .small {
   background-color: #ffba08;  
